@@ -148,6 +148,7 @@ $LANG = array(
 'L_SORT_ASCENDING_DATE'				=> 'data creissenta',
 'L_SORT_DESCENDING_DATE'			=> 'data decreissenta',
 'L_SORT_ALPHABETICAL'				=> 'alfabetic',
+'L_SORT_RANDOM'						=> 'aléatoire',
 'L_YES' 							=> 'Òc',
 'L_NO' 								=> 'Non',
 'L_OK'								=> 'Ok',
