@@ -569,6 +569,8 @@ class plxMotor {
 			return 'sort';
 		elseif($tri=='alpha')
 			return 'alpha';
+		elseif($tri=='random')
+			return 'random';			
 		else
 			return 'rsort';
 
